Added the topbar and comet-chat bar

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
-    <title>Application Title | SDSLabs</title>
+    <title>SDS Disclosure</title>
     <meta name="author" content="Team SDSLabs">
-	<title>SDSLabs Accounts</title>
-	<link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbar.css">
-	<script src="https://sdslabs.co.in/pipeline/api/v4/api.js" type="text/javascript"></script>
-    <script src="script.js" type="text/javascript">
-	$(document).ready(function(){
-		topbar.showTopbar();
-	});
+	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
+    <script src="http://sdslabs.co.in/api/public/api.js"></script>
+    <script>
+	    $(document).ready(function(){
+		    topbar.showTopbar();
+        topbar.setCurrent('disclosure');
+	    });
     </script>
     <style type="text/css">
       /* Override some defaults */
@@ -72,9 +72,11 @@
 
               The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p>
 
-              We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact">contact</a> us and disclose the vulnerability to us in a responsible manner.
+              We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.
 	    </div>
         </div>
       </div>
     </div> <!-- /container -->
+  <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
+  <script type="text/javascript" src="https://sdslabs.co.in/comet/cometchatjs.php"></script>
 </html>
