--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
-    <title>SDS Disclosure</title>
+    <title>SDSLabs Disclosure</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
     <script src="http://sdslabs.co.in/api/public/api.js"></script>
@@ -12,6 +12,25 @@
 	    $(document).ready(function(){
 		    topbar.showTopbar();
         topbar.setCurrent('disclosure');
+        $("#data").click(function() {
+          $('#data1').toggle();
+        });
+        $("#access").click(function() {
+          $('#access1').toggle();
+        });
+        $("#password").click(function() {
+          $('#password1').toggle();
+        });
+        $("#dc").click(function() {
+          $('#dc1').toggle();
+        });
+        $("#fb").click(function() {
+          $('#fb1').toggle();
+        });
+        $("#disclosure").click(function() {
+          $('#disclosure1').toggle();
+        });
+
 	    });
     </script>
     <style type="text/css">
@@ -19,9 +38,10 @@
       html, body {
 		font-family: 'Open Sans',Arial, Helvetica, sans-serif;
         background: #F2F2FF !important;
+        font-size: 20px;
       }
       body {
-        padding-top: 30px; /* 40px to make the container go all the way to the bottom of the topbar */
+        padding-top: 30px; /* 40px to make the container go all the way to the bottom of the topbar */  
       }
       .container > footer p {
         text-align: center; /* center align it with the container */
@@ -49,31 +69,59 @@
         padding: 20px 20px 10px;
         margin: -20px -20px 20px;
     }
+
+
+    .heading {
+      font-size: 18px;
+      line-height: 28px;
+    }
+
+    .answer {
+      display: none;
+      margin-top: 20px;
+      margin-bottom:20px;
+      font-size:14px;
+    }
+    
     </style>
   </head>
   <body>
     <div class="container">
       <div class="content">
         <div class="page-header">
-          <h1>How Safe is SDSLabs ???<small></small></h1>
+          <h1>How much SDSLabs know me ???<small></small></h1>
         </div>
         <div class="row">
           <div class="span14"> 
-              <p>In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users.<p>
-              The only personal data available to SDSLabs are the email address and phone numbers, which are provided by the users themselves upon registration itself.
-              <h3>The institute provides us with no data at all.</h3>
-              This means that all data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p>
-              
-              Even the limited amount of personal data we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team</a>.<p>
-
-              The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database.So even though you register on our site we cannot possibly decrypt your password.<p>
-
-              DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network.Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p>
-
-              The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p>
-
-              We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.
-	    </div>
+              <p class="heading">
+                In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users.<p><br><br>
+                <div id="data" class="heading">From where does SDSLabs get information about me?</div><br>
+                <div id="data1" class="answer">
+                  The only data available to SDSLabs, ie the email address and phone numbers, are provided by the users themselves upon  registration itself.
+                  <h3>The institute provides us with no data at all.</h3>
+                  All data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p>
+                </div><br>
+                <div id="access" class="heading">Who can access this information?</div><br>   
+                <div id="access1" class="answer">
+                  This limited amount of personal data which we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team</a><p>
+                </div><br>
+                <div id="password" class="heading">You know the password I used to register!!!</div><br>
+                <div id="password1" class="answer">
+                 The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database.So even though you register on our site we cannot possibly decrypt your password.<p>
+               </div><br>
+                <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div><br>
+                 <div id="dc1" class="answer">
+                  DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network.Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p>
+                </div><br>
+                <div id="fb" class="heading">The other day I submitted my fb password on your chatbox to use fb chat. Doesnt that make it accessible to you?</div><br>
+                <div id="fb1" class="answer">
+                  The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p>
+                </div><br>
+                <div id="disclosure" class="heading">Hmm I am still doubtful...</div><br>
+                <div id="disclosure1" class="answer">
+                  We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.<br>
+                </div><br>
+	         </div>
         </div>
       </div>
     </div> <!-- /container -->
