changed the format to Q/A

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <h1>How much SDSLabs know me ???<small></small></h1>
         </div>
               <p class="heading">
-                In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users.<p><br><br>
+                In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users:<p><br><br>
                 <div id="data" class="heading">From where does SDSLabs get information about me?</div><br>
                 <div id="data1" class="answer">
                   The only data available to SDSLabs, ie the email address and phone numbers, are provided by the users themselves upon  registration itself.
