changed http to https

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SDSLabs Disclosure</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
-    <script src="http://sdslabs.co.in/api/public/api.js"></script>
+    <script src="https://sdslabs.co.in/api/public/api.js"></script>
     <script>
 	    $(document).ready(function(){
 		    topbar.showTopbar();
