--- a/index.html
+++ b/index.html
@@ -89,29 +89,7 @@
     <div class="container">
       <div class="content">
         <div class="page-header">
-<<<<<<< HEAD
-          <h1>How Safe is SDSLabs ???<small></small></h1>
-        </div>
-        <div class="row">
-          <div class="span14"> 
-              <p>In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users.<p>
-              The only personal data available to SDSLabs are the email address and phone numbers, which are provided by the users themselves upon registration itself.
-              <h3>The institute provides us with no data at all.</h3>
-              This means that all data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p>
-              
-              Even the limited amount of personal data we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team</a>.<p>
-
-              The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database.So even though you register on our site we cannot possibly decrypt your password.<p>
-
-              DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network.Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p>
-
-              The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p>
-
-              We want the users to know what ever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact">contact</a> us and disclose the vulnerability to us in a responsible manner.
-	    </div>
-=======
           <h1>How much SDSLabs know me ???<small></small></h1>
->>>>>>> origin/alternate
         </div>
               <p class="heading">
                 In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users:<p><br><br>
@@ -123,7 +101,7 @@
                 </div><br>
                 <div id="access" class="heading">Who can access this information?</div><br>   
                 <div id="access1" class="answer">
-                  This limited amount of personal data which we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team</a><p>
+                  This limited amount of personal data which we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team.</a><p>
                 </div><br>
                 <div id="password" class="heading">You know the password I used to register!!!</div><br>
                 <div id="password1" class="answer">
