--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
-    <title>SDSLabs Security</title>
+    <title>Security | SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
     <script src="https://sdslabs.co.in/api/public/api.js"></script>
@@ -12,25 +12,6 @@
 	    $(document).ready(function(){
 		    topbar.showTopbar();
         topbar.setCurrent('Security');
-        $("#data").mouseleave(function() {
-          $('#data1').toggle();
-        });
-        $("#access").mouseleave(function() {
-          $('#access1').toggle();
-        });
-        $("#password").mouseleave(function() {
-          $('#password1').toggle();
-        });
-        $("#dc").mouseleave(function() {
-          $('#dc1').toggle();
-        });
-        $("#fb").mouseleave(function() {
-          $('#fb1').toggle();
-        });
-        $("#disclosure").mouseleave(function() {
-          $('#disclosure1').toggle();
-        });
-
 	    });
     </script>
     <style type="text/css">
@@ -77,10 +58,10 @@
     }
 
     .answer {
-      display: none;
       margin-top: 20px;
       margin-bottom:20px;
       font-size:14px;
+      background:#F0F0FC;
     }
     
     </style>
@@ -89,34 +70,34 @@
     <div class="container">
       <div class="content">
         <div class="page-header">
-          <h1>How much SDSLabs know me ???<small></small></h1>
+          <h1>How much SDSLabs know me ?<small></small></h1>
         </div>
               <p class="heading">
                 In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users:<p><br><br>
-                <div id="data" class="heading">From where does SDSLabs get information about me?</div><br>
-                <div id="data1" class="answer">
+                <div id="data" class="heading">From where does SDSLabs get information about me?</div>
+                <div id="data1" class="answer"><br>
                   The only data available to SDSLabs, ie the email address and phone numbers, are provided by the users themselves upon  registration itself.
                   <h3>The institute provides us with no data at all.</h3>
-                  All data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p>
-                </div><br>
-                <div id="access" class="heading">Who can access this information?</div><br>   
-                <div id="access1" class="answer">
-                  This limited amount of personal data which we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team.</a><p>
-                </div><br>
-                <div id="password" class="heading">You know the password I used to register!!!</div><br>
-                <div id="password1" class="answer">
-                 The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database.So even though you register on our site we cannot possibly know your password.<p>
-               </div><br>
-                <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div><br>
-                 <div id="dc1" class="answer">
-                  DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network.Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p>
-                </div><br>
-                <div id="fb" class="heading">The other day I submitted my facebook password on your chatbox to use facebook chat. Doesn't that make it accessible to you?</div><br>
-                <div id="fb1" class="answer">
-                  The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p>
-                </div><br>
-                <div id="disclosure" class="heading">Hmm I am still doubtful...</div><br>
-                <div id="disclosure1" class="answer">
+                  All data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p><br>
+                </div>
+                <div id="access" class="heading">Who can access this information?</div>   
+                <div id="access1" class="answer"><br>
+                  This limited amount of personal data which we have is accessible only to the limited members of our <a href="https://sdslabs.co.in/team">team.</a><p><br>
+                </div>
+                <div id="password" class="heading">You know the password I used to register!</div>
+                <div id="password1" class="answer"><br>
+                 The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database.So even though you register on our site we cannot possibly know your password.<p><br>
+               </div>
+                <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
+                 <div id="dc1" class="answer"><br>
+                  DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network.Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p><br>
+                </div>
+                <div id="fb" class="heading">The other day I submitted my facebook password on your chatbox to use facebook chat. Doesn't that make it accessible to you?</div>
+                <div id="fb1" class="answer"><br>
+                  The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p><br>
+                </div>
+                <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
+                <div id="disclosure1" class="answer"><br>
                   We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.<br>
                 </div><br>
 	         </div>
