--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 </div>
                 <div id="password" class="heading">You know the password I used to register!</div>
                 <div id="password1" class="answer"><br>
-                 The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database.So even though you register on our site we cannot possibly know your password.<p><br>
+                 The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database. So even though you register on our site we cannot possibly know your password.<p><br>
                </div>
                 <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
                  <div id="dc1" class="answer"><br>
-                  DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network.Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p><br>
+                  DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p><br>
                 </div>
                 <div id="fb" class="heading">The other day I submitted my facebook password on your chatbox to use facebook chat. Doesn't that make it accessible to you?</div>
                 <div id="fb1" class="answer"><br>
@@ -98,7 +98,7 @@
                 </div>
                 <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
                 <div id="disclosure1" class="answer"><br>
-                  We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.<br>
+                  We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.<p><br>
                 </div><br>
 	         </div>
     </div> <!-- /container -->
