--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h1>How much SDSLabs know me ?<small></small></h1>
         </div>
               <p class="heading">
-                In response to the belief held by handful of people that SDSLabs has a lot of personal information about the students of IITR, we, being a responsible group in the campus, want to clarify a few things to all our users:<p><br><br>
+                The following is a list of FAQs about privacy of data held by SDSLabs about its users:<p><br><br>
                 <div id="data" class="heading">From where does SDSLabs get information about me?</div>
                 <div id="data1" class="answer"><br>
                   The only data available to SDSLabs, ie the email address and phone numbers, are provided by the users themselves upon  registration itself.
@@ -86,15 +86,15 @@
                 </div>
                 <div id="password" class="heading">You know the password I used to register!</div>
                 <div id="password1" class="answer"><br>
-                 The passwords used by students during regisration on our website are unknown to us and are stored in encrypted form on our database. So even though you register on our site we cannot possibly know your password.<p><br>
+                 The passwords used by students during regisration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we cannot possibly know your password.<p><br>
                </div>
                 <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
                  <div id="dc1" class="answer"><br>
                   DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p><br>
                 </div>
-                <div id="fb" class="heading">The other day I submitted my facebook password on your chatbox to use facebook chat. Doesn't that make it accessible to you?</div>
+                <div id="fb" class="heading">If I connect SDSLabs chat to my facebook chat, will you get my facebook password?</div>
                 <div id="fb1" class="answer"><br>
-                  The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p><br>
+                  No, you donbt enter your facebook password on SDSLabs site, we redirect you to facebook.com where you authenticate the sdslabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing else. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
                 </div>
                 <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
                 <div id="disclosure1" class="answer"><br>
