fixed some typos and small changes in formatting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
-    <title>Privacy | SDSLabs</title>
+    <title>Security & Privacy | SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
     <script src="https://sdslabs.co.in/api/public/api.js"></script>
@@ -55,6 +55,7 @@
     .heading {
       font-size: 18px;
       line-height: 28px;
+      font-weight: 800;
     }
 
     .answer {
@@ -77,7 +78,7 @@
                 <div id="data" class="heading">From where does SDSLabs get information about me?</div>
                 <div id="data1" class="answer"><br>
                   The only data available to SDSLabs, ie the email address and phone numbers, are provided by the users themselves upon  registration itself.
-                  <h3>The institute provides us with no data at all.</h3>
+                  <h5>The institute provides us with no data at all.</h5>
                   All data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p><br>
                 </div>
                 <div id="access" class="heading">Who can access this information?</div>   
@@ -94,11 +95,11 @@
                 </div>
                 <div id="fb" class="heading">If I connect SDSLabs chat to my facebook chat, will you get my facebook password?</div>
                 <div id="fb1" class="answer"><br>
-                  No, you donbt enter your facebook password on SDSLabs site, we redirect you to facebook.com where you authenticate the sdslabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing else. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
+                  No, you do not enter your facebook password on SDSLabs site, we redirect you to facebook.com where you authenticate the sdslabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing else. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
                 </div>
                 <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
                 <div id="disclosure1" class="answer"><br>
-                  We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact"> contact</a> us and disclose the vulnerability to us in a responsible manner.<p><br>
+                  We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If you still have any doubt regarding the data we have and how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely sort it out.<p><br>
                 </div><br>
 	         </div>
     </div> <!-- /container -->
