--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div id="data1" class="answer"><br>
                   The only data available to SDSLabs, ie the email address and phone numbers, are provided by the users themselves upon  registration itself.
                   <h5>The institute provides us with no data at all.</h5>
-                  All data we have is either provided by the user's consent itself or publically available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's wieght/height/blood group/photographs/passport/driving licence/grades/passwords or any other personal information.<p><br>
+                  All data we have is either provided by the user's consent itself or publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's weight/height/blood group/photographs/passport/driving license/grades/passwords or any other personal information.<p><br>
                 </div>
                 <div id="access" class="heading">Who can access this information?</div>   
                 <div id="access1" class="answer"><br>
@@ -87,15 +87,15 @@
                 </div>
                 <div id="password" class="heading">You know the password I used to register!</div>
                 <div id="password1" class="answer"><br>
-                 The passwords used by students during regisration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we cannot possibly know your password.<p><br>
+                 The passwords used by students during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we cannot possibly know your password.<p><br>
                </div>
                 <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
                  <div id="dc1" class="answer"><br>
                   DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer) its very difficult to track them and they are not being tracked as well.<p><br>
                 </div>
-                <div id="fb" class="heading">If I connect SDSLabs chat to my facebook chat, will you get my facebook password?</div>
+                <div id="fb" class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
                 <div id="fb1" class="answer"><br>
-                  No, you do not enter your facebook password on SDSLabs site, we redirect you to facebook.com where you authenticate the sdslabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing else. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
+                  No, you do not enter your Facebook password on SDSLabs site, we redirect you to Facebook.com where you authenticate the SDSLabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing else. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
                 </div>
                 <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
                 <div id="disclosure1" class="answer"><br>
