--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <div class="content">
         <div class="page-header">
           <h1>How much SDSLabs know me ?<small></small></h1>
+          <div class="span">Do you want to report a security vulnerabilty? Go <a href="disclosure.html">here</a></div>
         </div>
               <p class="heading">
                 The following is a list of FAQs about privacy of data held by SDSLabs about its users:<p><br><br>
