modified the content

--- a/disclosure.html
+++ b/disclosure.html
@@ -69,12 +69,12 @@
         </div>
               <p class="heading">
                 <br><br>
-                If you have a security issue to report regarding problem with your password or login issues please contact us at <a href="mailto:contact@sdslabs.co.in">contact@sdslabs.co.in</a>.<br><br><br>
-                If you believe you have discovered a vulnerability in any of our apps or have a security incident to report, you are requested to disclose it to us in a responsible manner by contacting us at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> instead of disclosing it publicly as it can put important information at risk.<br><br>
+                If you have a security issue to report regarding problems with your password or other login issues please contact us at <a href="mailto:contact@sdslabs.co.in">contact@sdslabs.co.in</a>.<br><br><br>
+                If you believe you have discovered a security vulnerability in any of our apps or if you have a incident of security breach to report, you are requested to disclose it to us in a responsible manner by contacting us at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> instead of disclosing it publicly as it can put important personal information at risk.<br><br>
 
-                We take all the security issues seriously and do our best to quickly fix the problem, if any, as soon as possible. All mails sent to <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> are out topmost priority.<br><br>
+                We take all the security issues seriously and do our best to quickly fix the problem, if any, as soon as possible. All mails sent to <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> are our topmost priority.<br><br>
 
-                Though we are aware that "everything can be hacked" yet we have taken sufficient precautionary measures to secure all the data that we have. So if you like working in security, or learn about ethical hacking, and agree to <span id="imp">adhere to our disclosure policy</span> you are welcome to try to hack us.
+                Though we are aware that "everything can be hacked" yet we have taken sufficient precautionary measures to secure all the data that we have. So if you like working in security, or want to learn about ethical hacking, and agree to <span id="imp">adhere to our disclosure policy</span> you are welcome to try to hack us. But make sure you report the vulnerability to us only at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> and not disclose it publicly.
 	         </div>
     </div> <!-- /container -->
   <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
