fixed some minor issues

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 <div id="data1" class="answer"><br>
                   The only data available to SDSLabs are the email address and phone numbers of users. These are provided by the users themselves at the time of registration.
                   <h5>The institute provides us with no data at all.</h5>
-                  So all the data that we have is either provided to use by the users themselves or is publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration). We don't have anybody's weight/height/blood group/photographs/passport/driving license/grades/passwords or any other personal information apart from that listed already.<p><br>
+                   So all the data that we have is either provided to use by the users themselves or is publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration).We don't have anybody's passwords or any other personal information apart from that listed already.
+                  <p><br>
                 </div>
                 <div id="access" class="heading">Who can access this information?</div>   
                 <div id="access1" class="answer"><br>
@@ -100,10 +101,12 @@
                 </div>
                 <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
                 <div id="disclosure1" class="answer"><br>
-                  We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
+                  We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
                 </div><br>
 	         </div>
     </div> <!-- /container -->
   <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
   <script type="text/javascript" src="https://sdslabs.co.in/comet/cometchatjs.php"></script>
 </html>
+
+
