--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.8.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
-    <title>Security & Privacy | SDSLabs</title>
+    <title>Privacy & Security - SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
     <script src="https://sdslabs.co.in/api/public/api.js"></script>
     <script>
 	    $(document).ready(function(){
 		    topbar.showTopbar();
-        topbar.setCurrent('Privacy');
+        topbar.setCurrent('Privacy & Security');
 	    });
     </script>
     <style type="text/css">
