--- a/index.html
+++ b/index.html
@@ -6,27 +6,30 @@
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
     <title>Privacy & Security - SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
-	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
+    <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
     <script src="https://sdslabs.co.in/api/public/api.js"></script>
     <script>
-	    $(document).ready(function(){
-		    topbar.showTopbar();
+      $(document).ready(function(){
+        topbar.showTopbar();
         topbar.setCurrent('Privacy & Security');
-	    });
+      });
     </script>
     <style type="text/css">
       /* Override some defaults */
       html, body {
-		font-family: 'Open Sans',Arial, Helvetica, sans-serif;
+        font-family: 'Open Sans',Arial, Helvetica, sans-serif;
         background: #F2F2FF !important;
         font-size: 20px;
       }
+
       body {
         padding-top: 30px; /* 40px to make the container go all the way to the bottom of the topbar */  
       }
+
       .container > footer p {
         text-align: center; /* center align it with the container */
       }
+
       .container {
         width: 920px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
       }
@@ -37,11 +40,11 @@
         padding: 20px;
         margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
         -webkit-box-shadow: 0 5px 10px rgba(0,0,0, 0.3);
-		   -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-				box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+       -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
         border-left: 1px solid #D2D2D2;
-		border-right: 1px solid #D2D2D2;
-		border-bottom: 1px solid #D2D2D2;
+        border-right: 1px solid #D2D2D2;
+        border-bottom: 1px solid #D2D2D2;
       }
 
       /* Page header tweaks */
@@ -49,22 +52,21 @@
         background-color: #f5f5f5;
         padding: 20px 20px 10px;
         margin: -20px -20px 20px;
-    }
+      }
+
+      .heading {
+        font-size: 18px;
+        line-height: 28px;
+        font-weight: 800;
+      }
 
 
-    .heading {
-      font-size: 18px;
-      line-height: 28px;
-      font-weight: 800;
-    }
-
-    .answer {
-      margin-top: 20px;
-      margin-bottom:20px;
-      font-size:14px;
-      background:#F0F0FC;
-    }
-    
+      .answer {
+        margin-top: 20px;
+        margin-bottom:20px;
+        font-size:14px;
+        background:#F0F0FC;
+      }
     </style>
   </head>
   <body>
@@ -74,39 +76,40 @@
           <h1>How much SDSLabs know me ?<small></small></h1>
           <div class="span">Do you want to report a security vulnerabilty? Go <a href="disclosure.html">here</a></div><br>
         </div>
-              <p class="heading">
-                The following is a list of FAQs about privacy of data of the users held by SDSLabs :<p><br><br>
-                <div id="data" class="heading">From where does SDSLabs get information about me?</div>
-                <div id="data1" class="answer"><br>
-                  The only data available to SDSLabs are the email address and phone numbers of users. These are provided by the users themselves at the time of registration.
-                  <h5>The institute provides us with no data at all.</h5>
-                   So all the data that we have is either provided to use by the users themselves or is publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration).We don't have anybody's passwords or any other personal information apart from that listed already.
-                  <p><br>
-                </div>
-                <div id="access" class="heading">Who can access this information?</div>   
-                <div id="access1" class="answer"><br>
-                  This limited amount of personal data which we have is accessible only to the few members of our <a href="https://sdslabs.co.in/team">team.</a><p><br>
-                </div>
-                <div id="password" class="heading">You know the password I used to register!</div>
-                <div id="password1" class="answer"><br>
-                 The passwords used by users during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we donot and cannot know your password.<p><br>
-               </div>
-                <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
-                 <div id="dc1" class="answer"><br>
-                  No we don't. DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer), its very difficult to track them and they are not being tracked as well.<p><br>
-                </div>
-                <div id="fb" class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
-                <div id="fb1" class="answer"><br>
-                  No, you do not enter your Facebook password on SDSLabs site, we redirect you to Facebook.com where you authenticate the SDSLabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing more. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
-                </div>
-                <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
-                <div id="disclosure1" class="answer"><br>
-                  We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
-                </div><br>
-	         </div>
+          <p class="heading">
+            The following is a list of FAQs about privacy of data of the users held by SDSLabs :<p><br><br>
+            <div id="data" class="heading">From where does SDSLabs get information about me?</div>
+            <div id="data1" class="answer"><br>
+              The only data available to SDSLabs are the email address and phone numbers of users. These are provided by the users themselves at the time of registration.
+              <h5>The institute provides us with no data at all.</h5>
+               So all the data that we have is either provided to use by the users themselves or is publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration).We don't have anybody's passwords or any other personal information apart from that listed already.
+              <p><br>
+            </div>
+            <div id="access" class="heading">Who can access this information?</div>   
+            <div id="access1" class="answer"><br>
+              This limited amount of personal data which we have is accessible only to the few members of our <a href="https://sdslabs.co.in/team">team.</a><p><br>
+            </div>
+            <div id="password" class="heading">You know the password I used to register!</div>
+            <div id="password1" class="answer"><br>
+             The passwords used by users during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we donot and cannot know your password.<p><br>
+           </div>
+            <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
+             <div id="dc1" class="answer"><br>
+              No we don't. DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer), its very difficult to track them and they are not being tracked as well.<p><br>
+            </div>
+            <div id="fb" class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
+            <div id="fb1" class="answer"><br>
+              No, you do not enter your Facebook password on SDSLabs site, we redirect you to Facebook.com where you authenticate the SDSLabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing more. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
+            </div>
+            <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
+            <div id="disclosure1" class="answer"><br>
+              We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
+            </div><br>
+       </div>
     </div> <!-- /container -->
   <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
   <script type="text/javascript" src="https://sdslabs.co.in/comet/cometchatjs.php"></script>
+  </body>
 </html>
 
 
