--- a/index.html
+++ b/index.html
@@ -78,31 +78,31 @@
         </div>
           <p class="heading">
             The following is a list of FAQs about privacy of data of the users held by SDSLabs :<p><br><br>
-            <div id="data" class="heading">From where does SDSLabs get information about me?</div>
-            <div id="data1" class="answer"><br>
+            <div class="heading">From where does SDSLabs get information about me?</div>
+            <div class="answer"><br>
               The only data available to SDSLabs are the email address and phone numbers of users. These are provided by the users themselves at the time of registration.
               <h5>The institute provides us with no data at all.</h5>
                So all the data that we have is either provided to use by the users themselves or is publicly available (We use course data from 192.168.121.2/studentlist to help users during their registration).We don't have anybody's passwords or any other personal information apart from that listed already.
               <p><br>
             </div>
-            <div id="access" class="heading">Who can access this information?</div>   
-            <div id="access1" class="answer"><br>
+            <div class="heading">Who can access this information?</div>   
+            <div class="answer"><br>
               This limited amount of personal data which we have is accessible only to the few members of our <a href="https://sdslabs.co.in/team">team.</a><p><br>
             </div>
-            <div id="password" class="heading">You know the password I used to register!</div>
-            <div id="password1" class="answer"><br>
+            <div class="heading">You know the password I used to register!</div>
+            <div class="answer"><br>
              The passwords used by users during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we donot and cannot know your password.<p><br>
            </div>
-            <div id="dc" class="heading">Are you monitoring what I share or download from DC++?</div>
-             <div id="dc1" class="answer"><br>
+            <div class="heading">Are you monitoring what I share or download from DC++?</div>
+             <div class="answer"><br>
               No we don't. DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer), its very difficult to track them and they are not being tracked as well.<p><br>
             </div>
-            <div id="fb" class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
-            <div id="fb1" class="answer"><br>
+            <div class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
+            <div class="answer"><br>
               No, you do not enter your Facebook password on SDSLabs site, we redirect you to Facebook.com where you authenticate the SDSLabs app to access your chat session. Using that authentication, we can allow you to use chat from our site and nothing more. Also, we use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all communications.<p><br>
             </div>
-            <div id="disclosure" class="heading">Hmm I am still doubtful...</div>
-            <div id="disclosure1" class="answer"><br>
+            <div class="heading">Hmm I am still doubtful...</div>
+            <div class="answer"><br>
               We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
             </div><br>
        </div>
