Improve formatting to an extent

--- a/disclosure.html
+++ b/disclosure.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
-    <title>Disclosure | SDSLabs</title>
+    <title>Privacy & Security - SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
-	  <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
-    <script src="https://sdslabs.co.in/api/public/api.js"></script>
+	  <link rel="stylesheet" href="/home/topbarwide.css">
+    <script src="/api/public/api.js"></script>
     <script>
 	    $(document).ready(function(){
 		    topbar.showTopbar();
-        topbar.setCurrent('Disclosure');
+        topbar.setCurrent('Privacy & Security');
 	    });
     </script>
     <style type="text/css">
@@ -65,7 +65,8 @@
     <div class="container">
       <div class="content">
         <div class="page-header">
-          <h1>Responsible Disclosure Policy<small></small></h1>
+          <h1>Privacy & Security</h1>
+          <div class="span">Responsible Disclosure Policy</div><br>
         </div>
               <p class="heading">
                 <br><br>
