--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
     <title>Privacy & Security - SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
-    <link rel="stylesheet" href="https://sdslabs.co.in/lollipop/topbarwide.css">
-    <script src="https://sdslabs.co.in/api/public/api.js"></script>
+    <link rel="stylesheet" href="/home/topbarwide.css">
+    <script src="/api/public/api.js"></script>
     <script>
       $(document).ready(function(){
         topbar.showTopbar();
@@ -19,7 +19,6 @@
       html, body {
         font-family: 'Open Sans',Arial, Helvetica, sans-serif;
         background: #F2F2FF !important;
-        font-size: 20px;
       }
 
       body {
@@ -60,12 +59,21 @@
         font-weight: 800;
       }
 
-
       .answer {
         margin-top: 20px;
         margin-bottom:20px;
+        padding: 0px 20px;
         font-size:14px;
         background:#F0F0FC;
+      }
+
+      h2.span {
+        font-weight: normal;
+        font-size: 20px;
+      }
+
+      .span {
+        font-size: 14px;
       }
     </style>
   </head>
@@ -73,11 +81,11 @@
     <div class="container">
       <div class="content">
         <div class="page-header">
-          <h1>How much SDSLabs know me ?<small></small></h1>
-          <div class="span">Do you want to report a security vulnerabilty? Go <a href="disclosure.html">here</a></div><br>
+          <h1>Privacy & Security</h1>
+          <h2 class="span">FAQ</h2><br>
         </div>
+          <div class="span">Do you want to report a security vulnerabilty? Go <a href="disclosure.html">here</a>.</div>
           <p class="heading">
-            The following is a list of FAQs about privacy of data of the users held by SDSLabs :<p><br><br>
             <div class="heading">From where does SDSLabs get information about me?</div>
             <div class="answer"><br>
               The only data available to SDSLabs are the email address and phone numbers of users. These are provided by the users themselves at the time of registration.
