Add footer links

--- a/disclosure.html
+++ b/disclosure.html
@@ -29,7 +29,15 @@
 
           We take all the security issues seriously and do our best to quickly fix the problem, if any, as soon as possible. All mails sent to <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> are our topmost priority.<br><br>
 
-          Though we are aware that "everything can be hacked" yet we have taken sufficient precautionary measures to secure all the data that we have. So if you like working in security, or want to learn about ethical hacking, and agree to <span id="imp">adhere to our disclosure policy</span> you are welcome to try to hack us. But make sure you report the vulnerability to us only at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> and not disclose it publicly.
+          Though we are aware that "everything can be hacked" yet we have taken sufficient precautionary measures to secure all the data that we have. So if you like working in security, or want to learn about ethical hacking, and agree to <b>adhere to our disclosure policy</b> you are welcome to try to hack us. But make sure you report the vulnerability to us only at <a href="mailto:security@sdslabs.co.in">security@sdslabs.co.in</a> and not disclose it publicly.
+          <div class="footer">
+            <ul class="footerlinks">
+              <li>&copy; SDSLabs <span class="current-year"></span></li>
+              <li><a href="/security/">FAQ</a></li>
+              <li class="active">Responsible Disclosure</li>
+              <li><a href="/security/tc">Terms & Conditions</a></li>
+            </ul>
+          </div>
       </div>
     </div> <!-- /container -->
   <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
