--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </div>
             <div class="heading">You know the password I used to register!</div>
             <div class="answer"><br>
-             The passwords used by users during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we donot and cannot know your password.<p><br>
-           </div>
+              The passwords used by users during registration on our website are unknown to us and are stored in non-reversible encrypted form on our database. So even though you register on our site we donot and cannot know your password.<p><br>
+            </div>
             <div class="heading">Are you monitoring what I share or download from DC++?</div>
-             <div class="answer"><br>
+            <div class="answer"><br>
               No we don't. DC++ is runs in an open mode, which means it does not need any form of registration. We personally log very little data (mostly chat) on the DC network. Since the actual downloads are P2P (Peer To Peer), its very difficult to track them and they are not being tracked as well.<p><br>
             </div>
             <div class="heading">If I connect SDSLabs chat to my Facebook chat, will you get my Facebook password?</div>
@@ -52,6 +52,14 @@
             <div class="answer"><br>
               We want the users to know that whatever minimal amount of personal information they have shared with us is kept safe with utmost care and is used in a responsible manner. We have no interest in selling your personal data. If you still have any doubt regarding this data and about how we secure it, you are welcome to <a href="mailto:contact@sdslabs.co.in"> contact</a> us via mail or personally and we will surely answer all your queries.<p><br>
             </div><br>
+            <div class="footer">
+              <ul class="footerlinks">
+                <li>&copy; SDSLabs <span class="current-year"></span></li>
+                <li class="active">FAQ</li>
+                <li><a href="/security/disclosure">Responsible Disclosure</a></li>
+                <li><a href="/security/tc">Terms & Conditions</a></li>
+              </ul>
+            </div>
        </div>
     </div> <!-- /container -->
   <link type="text/css" href="https://sdslabs.co.in/comet/cometchatcss.php" rel="stylesheet"> 
