--- a/disclosure.html
+++ b/disclosure.html
@@ -13,6 +13,7 @@
 	    $(document).ready(function(){
 		    topbar.showTopbar();
         topbar.setCurrent('Privacy & Security');
+        $('.current-year').text(new Date().getFullYear());
 	    });
     </script>
   </head>
