--- a/disclosure.html
+++ b/disclosure.html
@@ -5,7 +5,7 @@
     <script type='text/javascript' src='https://cdn.sdslabs.co.in/cdnjs/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <link rel="stylesheet" href="https://cdn.sdslabs.co.in/css/css/bootstrap/1.4.0/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Privacy & Security - SDSLabs</title>
+    <title>Disclosure - Privacy & Security - SDSLabs</title>
     <meta name="author" content="Team SDSLabs">
 	  <link rel="stylesheet" href="/home/topbarwide.css">
     <script src="/api/public/api.js"></script>
